pkg/kgateway/agentgatewaysyncer/testdata/outputs/serviceentry/serviceentry-with-network.yaml
Addresses:
- service:
    addresses:
    - address: 8PAACg==
    hostname: api.example.com
    name: api-service
    namespace: default
    ports:
    - appProtocol: HTTP11
      servicePort: 8080
      targetPort: 8080
- workload:
    addresses:
    - wKgKAQ==
    canonicalName: network1-gateway
    canonicalRevision: latest
    clusterId: Kubernetes
    name: network1-gateway-network1-192.168.10.1
    namespace: default
    network: network1
    serviceAccount: network1-gateway-istio-remote
    tunnelProtocol: HBONE
    uid: Kubernetes/gateway/network1/192.168.10.1/15008
    workloadName: network1-gateway
- workload:
    addresses:
    - wKgUAQ==
    canonicalName: network2-gateway
    canonicalRevision: latest
    clusterId: Kubernetes
    name: network2-gateway-network2-192.168.20.1
    namespace: default
    network: network2
    serviceAccount: network2-gateway-istio-remote
    tunnelProtocol: HBONE
    uid: Kubernetes/gateway/network2/192.168.20.1/15008
    workloadName: network2-gateway
- workload:
    addresses:
    - CgAAZA==
    canonicalName: api-service
    canonicalRevision: latest
    clusterId: Kubernetes
    locality:
      region: us-west
      zone: zone1
    name: api-service
    namespace: default
    network: network1
    networkGateway:
      address:
        address: wKgKAQ==
        network: network1
      hboneMtlsPort: 15008
    serviceAccount: api-service
    services:
      default/api.example.com:
        ports:
        - servicePort: 8080
          targetPort: 8080
    uid: Kubernetes/networking.istio.io/ServiceEntry/default/api-service/10.0.0.100
    workloadName: api-service
    workloadType: POD
- workload:
    addresses:
    - CgABZA==
    canonicalName: api-service
    canonicalRevision: latest
    clusterId: Kubernetes
    locality:
      region: us-east
      zone: zone1
    name: api-service
    namespace: default
    network: network2
    networkGateway:
      address:
        address: wKgUAQ==
        network: network2
      hboneMtlsPort: 15008
    serviceAccount: api-service
    services:
      default/api.example.com:
        ports:
        - servicePort: 8080
          targetPort: 8080
    uid: Kubernetes/networking.istio.io/ServiceEntry/default/api-service/10.0.1.100
    workloadName: api-service
    workloadType: POD
Binds:
- key: 80/default/example-gateway
  port: 80
Listeners:
- bindKey: 80/default/example-gateway
  key: default/example-gateway.http
  name:
    gatewayName: example-gateway
    gatewayNamespace: default
    listenerName: http
  protocol: HTTP
Routes:
- backends:
  - backend:
      port: 8080
      service:
        hostname: api.example.com
        namespace: default
    weight: 1
  hostnames:
  - api.example.com
  key: default/multi-network-route.0.0.http
  listenerKey: default/example-gateway.http
  name:
    kind: HTTPRoute
    name: multi-network-route
    namespace: default
